--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,7 +9,8 @@ psycopg[binary]>=3.1.0
 psycopg2-binary>=2.9.9
 python-dotenv>=1.0.0
 httpx>=0.26.0
-pydantic>=2.10.0
+pydantic[email]>=2.10.0
 pydantic-settings>=2.1.0
 python-jose[cryptography]>=3.3.0
 gunicorn>=21.2.0
+email-validator>=2.1.0
